Enhance comprehension: Divide long paragraph in "programming skills" section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
                     <p>
                         Proficient in HTML5, CSS3, JavaScript, Git, GitHub, Bash, and Python, I possess a strong
                         foundation in web development. With excellent critical thinking and communication skills, I
-                        contribute effectively within collaborative teams. Proactive and detail-oriented, I bring strong
+                        contribute effectively within collaborative teams.
+                    </p>
+                    <p>
+                        Proactive and detail-oriented, I bring strong
                         organizational abilities to project management. Demonstrating leadership, I uphold high
                         standards of code quality, ensuring optimal performance in every project.
                     </p>
