--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/fonts..css">
+    <link rel="stylesheet" href="./css/fonts.css">
 </head>
 
 <body>
@@ -99,20 +99,18 @@
                         standards of code quality, ensuring optimal performance in every project.
                     </p>
                 </div>
-                <div>
-                    <div class="flex-chart">
-                        <div>
-                            <h3>HTML</h3>
-                            <p><b>Html5</b></p>
-                        </div>
-                        <div>
-                            <h3>CSS</h3>
-                            <p><b>CSS3</b></p>
-                        </div>
-                        <div>
-                            <h3>JS</h3>
-                            <p><b>React JS</b></p>
-                        </div>
+                <div class="flex-chart">
+                    <div>
+                        <h3>HTML</h3>
+                        <p><b>Html5</b></p>
+                    </div>
+                    <div>
+                        <h3>CSS</h3>
+                        <p><b>CSS3</b></p>
+                    </div>
+                    <div>
+                        <h3>JS</h3>
+                        <p><b>React JS</b></p>
                     </div>
                 </div>
             </div>
